# event-organizer

./: .env.example  .gitignore  README.md  alembic.ini  app.py  config.py  database.py  init_db.py  middleware.py  models.py  pyproject.toml  schemas.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
controllers/: auth_controller.py  event_controller.py  occurrence_controller.py  participant_controller.py  registration_controller.py  user_controller.py
migrations/versions/: 2025-09-12_initial_db_revision_c22c265ba7f5.py  2025-09-12_user_table_d0547b32a72d.py
services/: attendance_service.py  event_service.py  occurrence_service.py  participant_service.py  registration_service.py  user_service.py
static/css/: styles.css
templates/: base.html  checkin.html  checkin_checkout_selection.html  checkin_search_result.html  checkout.html  event_form.html  event_list.html  event_list_content.html  login.html  occurrence_list.html  participant_form.html  participant_list.html  participant_list_content.html  register.html  registration_edit.html  registration_list.html
